Change Japanese message resource

--- a/QKSMS/src/main/res/values-ja/strings.xml
+++ b/QKSMS/src/main/res/values-ja/strings.xml
@@ -110,131 +110,131 @@
   <string name="pref_category_notifications">通知</string>
   <string name="pref_category_summary_notifications">音、LED、プライバシー</string>
   <string name="pref_category_mms">MMS</string>
-  <string name="pref_category_summary_mms">MMS (APN)、最大サイズ、グループ メッセージ送信の設定</string>
+  <string name="pref_category_summary_mms">MMS (APN)、最大サイズ、グループメッセージ送信の設定</string>
   <string name="pref_category_quickreply">QK 返信</string>
-  <string name="pref_category_summary_quickreply">QK 返信、ポップアップのオプション</string>
+  <string name="pref_category_summary_quickreply">QK 返信のオプション</string>
   <string name="pref_category_quickcompose">QK 作成</string>
-  <string name="pref_category_summary_quickcompose">QK 作成、スターを付けた連絡先</string>
-  <string name="pref_category_about">アプリについて</string>
+  <string name="pref_category_summary_quickcompose">QK 作成のオプション</string>
+  <string name="pref_category_about">このアプリについて</string>
   <string name="pref_category_summary_about">バージョン、変更履歴、作者、謝辞</string>
   <string name="pref_theme">テーマ色</string>
-  <string name="pref_theme_summary_alt">タップしてテーマを変更します</string>
+  <string name="pref_theme_summary_alt">テーマ色を変更します</string>
   <string name="pref_icon">アイコンの色</string>
-  <string name="pref_icon_summary">タップして QKSMS のアイコンの色を変更します</string>
-  <string name="pref_status_tint">ステータス バーを色付けする</string>
-  <string name="pref_navigation_tint">ナビゲーション バーを色付けする</string>
+  <string name="pref_icon_summary">QKSMS のアイコンの色を変更します</string>
+  <string name="pref_status_tint">ステータスバーを色付けする</string>
+  <string name="pref_navigation_tint">ナビゲーションバーを色付けする</string>
   <string name="pref_background">背景色</string>
-  <string name="pref_background_summary">タップして背景色を変更します</string>
-  <string name="pref_bubbles">メッセージ バブル</string>
-  <string name="pref_bubbles_summary">タップしてメッセージ バブルの設定を変更します</string>
+  <string name="pref_background_summary">背景色を変更します</string>
+  <string name="pref_bubbles">メッセージバブル</string>
+  <string name="pref_bubbles_summary">メッセージバブルの設定を変更します</string>
   <string name="pref_night">夜間モード</string>
   <string name="pref_night_summary">バッテリーを節約し、目の負担を軽減します</string>
   <string name="pref_night_amoled">純粋な黒の背景</string>
   <string name="pref_night_amoled_summary">AMOLED ディスプレイのデバイスで余分なバッテリーを節約します</string>
-  <string name="pref_bubble_style_new">新しいバブル スタイルを使用する</string>
-  <string name="pref_color_sent">送信したメッセージを色分け</string>
+  <string name="pref_bubble_style_new">新しいバブルスタイルを使用する</string>
+  <string name="pref_color_sent">送信したメッセージを色分けする</string>
   <string name="pref_color_sent_summary">送信メッセージの背景のバブルに色を付けます</string>
   <string name="pref_color_received">受信したメッセージを色分けする</string>
   <string name="pref_color_received_summary">受信メッセージの背景のバブルに色を付けます</string>
-  <string name="pref_hide_avatar_conversations">会話のアバターを非表示にする</string>
+  <string name="pref_hide_avatar_conversations">会話リストのアバターを非表示にする</string>
   <string name="pref_hide_avatar_conversations_summary">会話リストで連絡先のアバターを非表示にします</string>
   <string name="pref_hide_avatar_sent">送信メッセージのアバターを非表示にする</string>
   <string name="pref_hide_avatar_sent_summary">送信メッセージのアバターを非表示にします</string>
   <string name="pref_hide_avatar_received">受信メッセージのアバターを非表示にする</string>
   <string name="pref_hide_avatar_received_summary">受信メッセージの連絡先のアバターを非表示にします</string>
-  <string name="pref_font_family">フォント ファミリー</string>
+  <string name="pref_font_family">フォントファミリー</string>
   <string name="pref_font_size">フォントサイズ</string>
   <string name="pref_font_weight">フォントの太さ</string>
   <string name="pref_message_count">メッセージ件数</string>
-  <string name="pref_message_count_summary">会話ごとにメッセージ数を表示します</string>
-  <string name="pref_sent_timestamps">送信タイムスタンプ</string>
-  <string name="pref_sent_timestamps_summary">受信されていないメッセージが送信されたときのタイムスタンプを表示します</string>
-  <string name="pref_force_timestamps">強制的にタイムスタンプ</string>
-  <string name="pref_force_timestamps_summary">すべてのメッセージでタイムスタンプを有効にします</string>
+  <string name="pref_message_count_summary">会話リストに会話ごとのメッセージ数を表示します</string>
+  <string name="pref_sent_timestamps">送信タイムスタンプの表示</string>
+  <string name="pref_sent_timestamps_summary">まだ返信が無い送信メッセージにのみ送信タイムスタンプを表示します</string>
+  <string name="pref_force_timestamps">タイムスタンプの強制</string>
+  <string name="pref_force_timestamps_summary">すべてのメッセージにタイムスタンプを表示します</string>
   <string name="pref_key_timestamp_delay">新しいタイムスタンプの遅延</string>
-  <string name="pref_key_timestamp_delay_summary">新しいタイムスタンプを表示するまで、2 つのメッセージ間で経過する必要がある分数。</string>
+  <string name="pref_key_timestamp_delay_summary">新しいタイムスタンプを表示するまでに 2 つのメッセージ間で経過する必要がある時間 (分) を指定します</string>
   <string name="pref_compose_favorites">スターを付けた連絡先</string>
   <string name="pref_compose_summary_favorites">QK 作成ウィンドウにスターを付けた連絡先を表示します。タップすると消えます</string>
   <string name="pref_prox_sensor_call">近接センサー</string>
-  <string name="pref_prox_sensor_call_summary">会話中に、お使いの電話を耳に持って来ると通話を開始します</string>
+  <string name="pref_prox_sensor_call_summary">近接センサーを有効にします。会話中に電話を耳にあてると通話を開始します</string>
   <string name="pref_delivery">配信確認</string>
-  <string name="pref_delivery_summary">メッセージが正常に送信されたことを確認します</string>
+  <string name="pref_delivery_summary">メッセージの配信確認を有効にします</string>
   <string name="pref_delivery_toast">トーストを表示</string>
   <string name="pref_delivery_toast_summary">メッセージが配信されたことを示す、短いトーストを表示します</string>
   <string name="pref_delivery_vibrate">振動</string>
-  <string name="pref_delivery_vibrate_summary">メッセージ配信で振動します</string>
-  <string name="pref_delete_old_messages">古いメッセージを削除</string>
+  <string name="pref_delivery_vibrate_summary">メッセージ配信時に振動します</string>
+  <string name="pref_delete_old_messages">古いメッセージの削除</string>
   <string name="pref_delete_old_messages_summary">古いメッセージを自動的に削除します</string>
   <string name="pref_delete_old_messages_unread">未読メッセージ</string>
-  <string name="pref_delete_old_messages_unread_summary">%s 日後に自動的に未読メッセージを削除します</string>
+  <string name="pref_delete_old_messages_unread_summary">%s 日後に未読メッセージを自動的に削除します</string>
   <string name="pref_delete_old_messages_read">既読メッセージ</string>
-  <string name="pref_delete_old_messages_read_summary">%s 日後に自動的に既読メッセージを削除します</string>
-  <string name="pref_yappy">Yappy 統合</string>
-  <string name="pref_endlessjabber_summary">Yappy の完全なサポートを有効にします</string>
-  <string name="pref_blocked_conversations">ブロックされた会話</string>
-  <string name="pref_blocked_conversations_summary">会話を長押ししてブロックすると、ブロックされた受信トレイに移動して通知を停止します</string>
-  <string name="pref_block_future">将来のメッセージをブロック</string>
-  <string name="pref_block_future_summary">ブロックする電話番号を追加します</string>
-  <string name="pref_should_i_answer">回答する必要がありますか? 統合</string>
-  <string name="pref_should_i_answer_summary">ブロックされている番号からの受信メッセージを自動的に削除します。回答する必要がありますか?</string>
+  <string name="pref_delete_old_messages_read_summary">%s 日後に既読メッセージを自動的に削除します</string>
+  <string name="pref_yappy">「Yappy」アプリとの統合</string>
+  <string name="pref_endlessjabber_summary">「Yappy」アプリとの統合を有効にします</string>
+  <string name="pref_blocked_conversations">会話のブロック</string>
+  <string name="pref_blocked_conversations_summary">会話のブロックを有効にします。会話リストで会話を長押ししてブロックし、ブロックされた受信トレイに移動して、通知を停止できます</string>
+  <string name="pref_block_future">ブロックする電話番号</string>
+  <string name="pref_block_future_summary">ブロックする電話番号の追加・解除を行います</string>
+  <string name="pref_should_i_answer">「Should I Answer?」アプリとの連携</string>
+  <string name="pref_should_i_answer_summary">「Should I Answer?」アプリと連携し、ブロックされた電話番号からの受信メッセージを自動的に削除します</string>
   <string name="pref_mobile_only">携帯電話番号</string>
-  <string name="pref_mobile_only_summary">連絡先の候補で携帯電話番号のみを表示します</string>
+  <string name="pref_mobile_only_summary">連絡先の候補に携帯電話番号のみを表示します</string>
   <string name="pref_auto_emoji">自動絵文字</string>
-  <string name="pref_auto_emoji_summary">画像絵文字で、テキストを置き換えます</string>
+  <string name="pref_auto_emoji_summary">テキストを画像絵文字で置き換えます</string>
   <string name="pref_enter_button">Enter ボタン</string>
-  <string name="pref_enter_button_summary">タップしてキーボードの Enter ボタンの動作を変更します</string>
-  <string name="pref_compose_group">グループ メッセージ送信</string>
-  <string name="pref_compose_group_summary">複数の人にメッセージを作成するとき、個々のメッセージの代わりにグループ メッセージを送信します</string>
+  <string name="pref_enter_button_summary">キーボードの Enter ボタンの動作を変更します</string>
+  <string name="pref_compose_group">グループメッセージ送信</string>
+  <string name="pref_compose_group_summary">複数の人にメッセージを作成するとき、個々へのメッセージ (SMS) ではなく、グループメッセージ (MMS) を送信します</string>
   <string name="pref_auto_download">自動ダウンロード MMS</string>
   <string name="pref_auto_download_summary">使用可能になったとき、自動的に MMS メッセージをダウンロードします</string>
-  <string name="pref_auto_data">自動データ</string>
-  <string name="pref_auto_data_summary">MMS の送受信時に自動的にデータをオンにします</string>
+  <string name="pref_auto_data">自動でのデータアクセス有効化</string>
+  <string name="pref_auto_data_summary">MMS の送受信時に自動的にデータアクセスを有効にします</string>
   <string name="pref_send_texts_as_mms">テキストを MMS で送信</string>
   <string name="pref_send_texts_as_mms_summary">テキストメッセージを SMS ではなく MMS で送信します</string>
   <string name="pref_split">SMS の分割</string>
-  <string name="pref_split_summary">長いメッセージを個別のメッセージに分割します</string>
+  <string name="pref_split_summary">長いメッセージを個別のメッセージ (SMS) に分割します</string>
   <string name="pref_split_counter">分割カウンター</string>
-  <string name="pref_split_counter_summary">それぞれの分割メッセージの前にカウンターを追加します</string>
+  <string name="pref_split_counter_summary">分割したそれぞれのメッセージの先頭にカウンター文字を追加します</string>
   <string name="pref_long_as_mms">長いメッセージを MMS として送信</string>
-  <string name="pref_long_as_mms_summary">長いメッセージを分割せず MMS として送信します</string>
-  <string name="pref_long_as_mms_after">MMS として送信する長さ</string>
-  <string name="pref_long_as_mms_after_summary">タップして MMS として送信するメッセージの長さを変更します</string>
+  <string name="pref_long_as_mms_summary">長いメッセージを SMS に分割せず、MMS として送信します</string>
+  <string name="pref_long_as_mms_after">MMS として送信するメッセージの数</string>
+  <string name="pref_long_as_mms_after_summary">MMS として送信するメッセージの数のしきい値を変更します</string>
   <string name="pref_return">Return ボタンを表示</string>
   <string name="pref_return_summary">絵文字ボタンの代わりにキーボードの return キーを表示します</string>
   <string name="pref_text">テキスト</string>
   <string name="pref_notifications">SMS 通知を有効にする</string>
-  <string name="pref_led">通知 LED</string>
-  <string name="pref_theme_led">通知 LED 色</string>
-  <string name="pref_wake">携帯電話をウェイク</string>
-  <string name="pref_wake_summary">新しいメッセージを受信したときに画面をオンにします</string>
+  <string name="pref_led">LED での通知</string>
+  <string name="pref_theme_led">通知時の LED 色</string>
+  <string name="pref_wake">ウェイクアップ設定</string>
+  <string name="pref_wake_summary">新しいメッセージを受信したときにスリープを解除し、スクリーンを点灯します</string>
   <string name="pref_notifications_private">プライベート通知</string>
-  <string name="pref_notifications_private_summary">タップして、非表示にする通知を変更します</string>
+  <string name="pref_notifications_private_summary">非表示にする通知を変更します</string>
   <string name="pref_ringtone">通知音</string>
   <string name="pref_ringtone_summary">通知音を選択します</string>
-  <string name="pref_ticker">ティッカーを表示</string>
-  <string name="pref_ticker_summary">通知バーに新しいメッセージのスニペットを表示します</string>
+  <string name="pref_ticker">ティッカーの表示</string>
+  <string name="pref_ticker_summary">新しいメッセージを通知領域に簡易表示します</string>
   <string name="pref_vibration">振動</string>
   <string name="pref_vibration_summary">新しいメッセージを受信したときに振動します</string>
   <string name="pref_notification_call">通話ボタン</string>
-  <string name="pref_notification_call_summary">通知から、メッセージの送信者に電話します</string>
+  <string name="pref_notification_call_summary">通知からメッセージの送信者に電話します</string>
   <string name="pref_dimiss_read">既読としてマーク</string>
   <string name="pref_dismiss_read_summary">通知をクリアしたとき、メッセージを既読としてマークします</string>
-  <string name="pref_delayed">メッセージ送信遅延</string>
-  <string name="pref_delayed_summary">メッセージを送信する前に待機して、確認する機会を与えます</string>
+  <string name="pref_delayed">メッセージ遅延送信</string>
+  <string name="pref_delayed_summary">メッセージを送信する前に待機し、キャンセルする機会を与えます</string>
   <string name="pref_delayed_duration">遅延時間 (秒)</string>
-  <string name="pref_delayed_duration_summary">メッセージを送信する前に待機する時間</string>
+  <string name="pref_delayed_duration_summary">メッセージを送信する前に待機する時間を設定します</string>
   <string name="pref_night_auto">自動夜間モード</string>
-  <string name="pref_night_auto_summary">時間に基づき、自動的に夜間モードを有効にします</string>
-  <string name="pref_day_start">日中の開始時間</string>
-  <string name="pref_night_start">夜間の開始時間</string>
+  <string name="pref_night_auto_summary">時間に基づく、自動夜間モードを有効にします</string>
+  <string name="pref_day_start">昼間の開始時刻を指定します</string>
+  <string name="pref_night_start">夜間の開始時刻を指定します</string>
   <string name="pref_qk_responses">QK 応答</string>
-  <string name="pref_qk_responses_summary">Android ウェアデバイスから使用する、プリセットの応答を変更します</string>
-  <string name="pref_quickreply_enabled">QK 返信を有効にしました</string>
-  <string name="pref_quickreply_enabled_summary">新しいメッセージを受信するたびに、QK 返信ウィンドウを表示します</string>
-  <string name="pref_tap_to_quit">タップして閉じる</string>
-  <string name="pref_tap_to_quit_summary">ウィンドウの外側の任意の場所をタップすると、閉じます</string>
-  <string name="pref_quickcompose">QK 作成を有効にしました</string>
-  <string name="pref_quickcompose_summary">クリックして新しいメッセージを作成できる通知を表示します</string>
+  <string name="pref_qk_responses_summary">Android 端末が使用する、プリセットの応答を変更します</string>
+  <string name="pref_quickreply_enabled">QK 返信</string>
+  <string name="pref_quickreply_enabled_summary">新しいメッセージを受信するたび、QK 返信ウィンドウを表示します</string>
+  <string name="pref_tap_to_quit">タップで閉じる</string>
+  <string name="pref_tap_to_quit_summary">QK 返信ウィンドウの外側をタップすることで閉じます</string>
+  <string name="pref_quickcompose">QK 作成</string>
+  <string name="pref_quickcompose_summary">通知をタップして新しいメッセージを作成します</string>
   <string name="pref_mms_enabled">MMS を有効にしました</string>
   <string name="pref_mms_enabled_summary">MMS メッセージの送信および受信を有効にします</string>
   <string name="pref_mmsc_url">MMSC</string>
@@ -242,7 +242,7 @@
   <string name="pref_mms_port">MMS ポート</string>
   <string name="pref_apn_chooser">デフォルト APN を読み込む</string>
   <string name="pref_strip_unicode">ユニコードを除去</string>
-  <string name="pref_strip_unicode_summary">GSM 互換文字のフルレングスのメッセージでサポートされていない文字をスワップします</string>
+  <string name="pref_strip_unicode_summary">フルレングスのメッセージでサポートされていない GSM 互換文字を置換します</string>
   <string name="pref_system_bar_flat">フラット システム バー</string>
   <string name="pref_system_bar_flat_summary">ほとんどの KitKat デバイスで、システム UI バーのグラデーションを取り除きます</string>
   <string name="pref_status_compat">ステータス バーの修正</string>
@@ -252,9 +252,9 @@
   <string name="pref_about_version_title">QKSMS バージョン</string>
   <string name="pref_about_authors_title">作者</string>
   <string name="pref_about_authors_summary">Moez Bhatti</string>
-  <string name="pref_changelog_summary">タップすると、変更履歴を表示します</string>
-  <string name="pref_about_thanks_title">ありがとうございます</string>
-  <string name="pref_about_thanks_summary">タップすると、オープン ソース貢献者を表示します</string>
+  <string name="pref_changelog_summary">変更履歴を表示します</string>
+  <string name="pref_about_thanks_title">謝辞</string>
+  <string name="pref_about_thanks_summary">オープン ソース貢献者を表示します</string>
   <string name="pref_donate_title">寄付</string>
   <string name="pref_donate_summary">QKSMS は無料です。寄付をして私たちをサポートしてください!</string>
   <string name="pref_about_gplus_title">Google+</string>
@@ -303,8 +303,8 @@
   <string name="title_picker">新しいメッセージ</string>
   <string name="title_donate">寄付</string>
   <string name="title_qk_responses">QK 応答</string>
-  <string name="title_block_address">ブロック番号</string>
-  <string name="title_unblock_address">ブロック解除番号</string>
+  <string name="title_block_address">ブロックする電話番号</string>
+  <string name="title_unblock_address">ブロックを解除する電話番号</string>
   <string name="title_conversations_selected">%s 選択しました</string>
   <string name="title_palette">パレット</string>
   <string name="title_rgb">RGB</string>
@@ -545,23 +545,23 @@
   <string name="not_default_send">QKSMS は、メッセージを送信するために SMS アプリにする必要があります</string>
   <!-- Tells the user they should set QKSMS as the default messaging app -->
   <string name="not_default_first">いくつかのものは、QKSMS がデフォルトの SMS アプリになるまで動作しません</string>
-  <string name="delayed_messaging_info">メッセージ送信遅延は、メッセージを送信する前にキャンセルできます。設定でデフォルトの動作および詳細を変更してください。</string>
+  <string name="delayed_messaging_info">メッセージ遅延送信は、メッセージを送信する前にキャンセルできます。設定でデフォルトの動作および詳細を変更してください。</string>
   <string name="delayed_duration_bounds_error">期間は 1 ～ 30 秒の間にする必要があります</string>
   <!-- Dialog title for the Read Report dialog. -->
   <string name="confirm">確認</string>
   <!-- Dialog text for the Read Report dialog. -->
   <string name="message_send_read_report">既読報告が送信されます。</string>
   <!-- Dialog title for updating app icon color -->
-  <string name="update_icon_title">アイコンの色を更新</string>
+  <string name="update_icon_title">アイコンの色</string>
   <!-- Dialog message for updating app icon color -->
   <string name="update_icon_message">アイコンの色を変更すると QKSMS を再起動する必要があります</string>
   <string name="dialog_conversation_details_title">会話の詳細</string>
   <string name="dialog_conversation_details_last_message_date">最新メッセージの日付</string>
   <string name="dialog_conversation_details_message_count">メッセージ件数</string>
   <string name="dialog_conversation_details_recipients">受信者 (%s)</string>
-  <string name="dialog_should_i_answer_title">回答する必要がありますか? インストールされていません</string>
+  <string name="dialog_should_i_answer_title">「Should I Answer?」アプリがインストールされていません</string>
   <string name="dialog_should_i_answer_message">Google Play から今すぐアプリをダウンロードしますか?</string>
-  <string name="dialog_delete_old_messages">自動的に古いメッセージを削除してもよろしいですか？</string>
+  <string name="dialog_delete_old_messages">古いメッセージを自動的に削除してもよろしいですか？</string>
   <!-- Title for audio file picker -->
   <string name="select_audio">音を選択</string>
   <!-- Menu title to copy an attachment to the shared storage [CHAR LIMIT=25] -->
@@ -637,7 +637,7 @@
   <!--Toast shown to tell the user that they don't have a photo attachments app, and suggests that they download one-->
   <string name="attachment_app_not_found">添付ファイルのアプリが見つかりません。フォトギャラリー アプリをインストールしてみてください!</string>
   <string name="attachment_camera_error">カメラを開くことができませんでした</string>
-  <string name="pref_max_mms_attachment_size">最大 MMS 添付ファイル サイズ</string>
+  <string name="pref_max_mms_attachment_size">MMS への添付ファイルの最大サイズ</string>
   <string name="error_no_recipients">このメッセージを送信する連絡先を選択してください!</string>
   <string name="error_file_not_found">QKSMS は、共有しようとしているファイルにアクセスできません!</string>
   <string name="sending_blocked_welcome_screen_message">ホールドアップ! 1 分で実際のメッセージを送ることができます!</string>
@@ -671,7 +671,7 @@
   <string name="pref_category_mms_configuration">MMS 設定</string>
   <string name="pref_mms_contact_support_summary">MMS を設定する支援をうけるため、QKSMS チームに連絡します</string>
   <string name="pref_markdown_enabled">テキストの書式設定</string>
-  <string name="pref_markdown_enabled_summary">メッセージで、太字、下線、および斜体にするため、マークダウンの構文を使用します</string>
+  <string name="pref_markdown_enabled_summary">メッセージを太字、下線、および斜体にするため、マークダウン構文を使用します</string>
   <string name="want_read_indicators">既読インジケーターが必要ですか?</string>
   <string name="color_swatch_description">色 %1$d</string>
   <string name="color_swatch_description_selected">色 %1$d を選択しました</string>
@@ -720,8 +720,8 @@
     <item>最大</item>
   </string-array>
   <string-array name="font_families">
-    <item>Roboto 標準</item>
-    <item>Roboto コンデンス</item>
+    <item>Roboto Regular フォント</item>
+    <item>Roboto Condensed フォント</item>
     <item>システム フォント</item>
   </string-array>
   <string-array name="font_weights">
