Change Japanese message resource

--- a/QKSMS/src/main/res/values-ja/strings.xml
+++ b/QKSMS/src/main/res/values-ja/strings.xml
@@ -121,8 +121,8 @@
   <string name="pref_theme_summary_alt">テーマ色を変更します</string>
   <string name="pref_icon">アイコンの色</string>
   <string name="pref_icon_summary">QKSMS のアイコンの色を変更します</string>
-  <string name="pref_status_tint">ステータスバーを色付けする</string>
-  <string name="pref_navigation_tint">ナビゲーションバーを色付けする</string>
+  <string name="pref_status_tint">ステータスバーを色付け</string>
+  <string name="pref_navigation_tint">ナビゲーションバーを色付け</string>
   <string name="pref_background">背景色</string>
   <string name="pref_background_summary">背景色を変更します</string>
   <string name="pref_bubbles">メッセージバブル</string>
@@ -131,16 +131,16 @@
   <string name="pref_night_summary">バッテリーを節約し、目の負担を軽減します</string>
   <string name="pref_night_amoled">純粋な黒の背景</string>
   <string name="pref_night_amoled_summary">AMOLED ディスプレイのデバイスで余分なバッテリーを節約します</string>
-  <string name="pref_bubble_style_new">新しいバブルスタイルを使用する</string>
-  <string name="pref_color_sent">送信したメッセージを色分けする</string>
+  <string name="pref_bubble_style_new">新しいバブルスタイル</string>
+  <string name="pref_color_sent">送信メッセージを色分け</string>
   <string name="pref_color_sent_summary">送信メッセージの背景のバブルに色を付けます</string>
-  <string name="pref_color_received">受信したメッセージを色分けする</string>
+  <string name="pref_color_received">受信メッセージを色分け</string>
   <string name="pref_color_received_summary">受信メッセージの背景のバブルに色を付けます</string>
-  <string name="pref_hide_avatar_conversations">会話リストのアバターを非表示にする</string>
+  <string name="pref_hide_avatar_conversations">会話リストのアバターを非表示</string>
   <string name="pref_hide_avatar_conversations_summary">会話リストで連絡先のアバターを非表示にします</string>
-  <string name="pref_hide_avatar_sent">送信メッセージのアバターを非表示にする</string>
+  <string name="pref_hide_avatar_sent">送信メッセージのアバターを非表示</string>
   <string name="pref_hide_avatar_sent_summary">送信メッセージのアバターを非表示にします</string>
-  <string name="pref_hide_avatar_received">受信メッセージのアバターを非表示にする</string>
+  <string name="pref_hide_avatar_received">受信メッセージのアバターを非表示</string>
   <string name="pref_hide_avatar_received_summary">受信メッセージの連絡先のアバターを非表示にします</string>
   <string name="pref_font_family">フォントファミリー</string>
   <string name="pref_font_size">フォントサイズ</string>
@@ -148,7 +148,7 @@
   <string name="pref_message_count">メッセージ件数</string>
   <string name="pref_message_count_summary">会話リストに会話ごとのメッセージ数を表示します</string>
   <string name="pref_sent_timestamps">送信タイムスタンプの表示</string>
-  <string name="pref_sent_timestamps_summary">まだ返信が無い送信メッセージにのみ送信タイムスタンプを表示します</string>
+  <string name="pref_sent_timestamps_summary">メッセージが送信された時のタイムスタンプを表示します</string>
   <string name="pref_force_timestamps">タイムスタンプの強制</string>
   <string name="pref_force_timestamps_summary">すべてのメッセージにタイムスタンプを表示します</string>
   <string name="pref_key_timestamp_delay">新しいタイムスタンプの遅延</string>
@@ -159,20 +159,20 @@
   <string name="pref_prox_sensor_call_summary">近接センサーを有効にします。会話中に電話を耳にあてると通話を開始します</string>
   <string name="pref_delivery">配信確認</string>
   <string name="pref_delivery_summary">メッセージの配信確認を有効にします</string>
-  <string name="pref_delivery_toast">トーストを表示</string>
-  <string name="pref_delivery_toast_summary">メッセージが配信されたことを示す、短いトーストを表示します</string>
-  <string name="pref_delivery_vibrate">振動</string>
+  <string name="pref_delivery_toast">配信完了を表示</string>
+  <string name="pref_delivery_toast_summary">メッセージが配信されたことを画面に表示します</string>
+  <string name="pref_delivery_vibrate">バイブレーション</string>
   <string name="pref_delivery_vibrate_summary">メッセージ配信時に振動します</string>
   <string name="pref_delete_old_messages">古いメッセージの削除</string>
-  <string name="pref_delete_old_messages_summary">古いメッセージを自動的に削除します</string>
+  <string name="pref_delete_old_messages_summary">古くなったメッセージを自動的に削除します</string>
   <string name="pref_delete_old_messages_unread">未読メッセージ</string>
-  <string name="pref_delete_old_messages_unread_summary">%s 日後に未読メッセージを自動的に削除します</string>
+  <string name="pref_delete_old_messages_unread_summary">未読メッセージを %s 日後に自動的に削除します</string>
   <string name="pref_delete_old_messages_read">既読メッセージ</string>
-  <string name="pref_delete_old_messages_read_summary">%s 日後に既読メッセージを自動的に削除します</string>
+  <string name="pref_delete_old_messages_read_summary">既読メッセージを %s 日後に自動的に削除します</string>
   <string name="pref_yappy">「Yappy」アプリとの統合</string>
   <string name="pref_endlessjabber_summary">「Yappy」アプリとの統合を有効にします</string>
   <string name="pref_blocked_conversations">会話のブロック</string>
-  <string name="pref_blocked_conversations_summary">会話のブロックを有効にします。会話リストで会話を長押ししてブロックし、ブロックされた受信トレイに移動して、通知を停止できます</string>
+  <string name="pref_blocked_conversations_summary">会話のブロックを有効にします。会話リストで会話を長押ししてブロックできます。会話はブロックされた受信トレイに移動され、通知を停止します</string>
   <string name="pref_block_future">ブロックする電話番号</string>
   <string name="pref_block_future_summary">ブロックする電話番号の追加・解除を行います</string>
   <string name="pref_should_i_answer">「Should I Answer?」アプリとの連携</string>
@@ -180,7 +180,7 @@
   <string name="pref_mobile_only">携帯電話番号</string>
   <string name="pref_mobile_only_summary">連絡先の候補に携帯電話番号のみを表示します</string>
   <string name="pref_auto_emoji">自動絵文字</string>
-  <string name="pref_auto_emoji_summary">テキストを画像絵文字で置き換えます</string>
+  <string name="pref_auto_emoji_summary">テキストを画像の絵文字で置き換えます</string>
   <string name="pref_enter_button">Enter ボタン</string>
   <string name="pref_enter_button_summary">キーボードの Enter ボタンの動作を変更します</string>
   <string name="pref_compose_group">グループメッセージ送信</string>
@@ -191,14 +191,14 @@
   <string name="pref_auto_data_summary">MMS の送受信時に自動的にデータアクセスを有効にします</string>
   <string name="pref_send_texts_as_mms">テキストを MMS で送信</string>
   <string name="pref_send_texts_as_mms_summary">テキストメッセージを SMS ではなく MMS で送信します</string>
-  <string name="pref_split">SMS の分割</string>
+  <string name="pref_split">SMS への分割</string>
   <string name="pref_split_summary">長いメッセージを個別のメッセージ (SMS) に分割します</string>
-  <string name="pref_split_counter">分割カウンター</string>
-  <string name="pref_split_counter_summary">分割したそれぞれのメッセージの先頭にカウンター文字を追加します</string>
+  <string name="pref_split_counter">分割カウント文字</string>
+  <string name="pref_split_counter_summary">分割したそれぞれのメッセージの先頭に分割カウント文字を追加します</string>
   <string name="pref_long_as_mms">長いメッセージを MMS として送信</string>
-  <string name="pref_long_as_mms_summary">長いメッセージを SMS に分割せず、MMS として送信します</string>
+  <string name="pref_long_as_mms_summary">長いメッセージを SMS に分割せず、MMS で送信します</string>
   <string name="pref_long_as_mms_after">MMS として送信するメッセージの数</string>
-  <string name="pref_long_as_mms_after_summary">MMS として送信するメッセージの数のしきい値を変更します</string>
+  <string name="pref_long_as_mms_after_summary">MMS として送信するメッセージ数のしきい値を指定します</string>
   <string name="pref_return">Return ボタンを表示</string>
   <string name="pref_return_summary">絵文字ボタンの代わりにキーボードの return キーを表示します</string>
   <string name="pref_text">テキスト</string>
@@ -211,28 +211,28 @@
   <string name="pref_notifications_private_summary">非表示にする通知を変更します</string>
   <string name="pref_ringtone">通知音</string>
   <string name="pref_ringtone_summary">通知音を選択します</string>
-  <string name="pref_ticker">ティッカーの表示</string>
+  <string name="pref_ticker">通知の表示</string>
   <string name="pref_ticker_summary">新しいメッセージを通知領域に簡易表示します</string>
-  <string name="pref_vibration">振動</string>
+  <string name="pref_vibration">バイブレーション</string>
   <string name="pref_vibration_summary">新しいメッセージを受信したときに振動します</string>
   <string name="pref_notification_call">通話ボタン</string>
   <string name="pref_notification_call_summary">通知からメッセージの送信者に電話します</string>
   <string name="pref_dimiss_read">既読としてマーク</string>
-  <string name="pref_dismiss_read_summary">通知をクリアしたとき、メッセージを既読としてマークします</string>
+  <string name="pref_dismiss_read_summary">通知をクリアしたとき、メッセージを既読にします</string>
   <string name="pref_delayed">メッセージ遅延送信</string>
-  <string name="pref_delayed_summary">メッセージを送信する前に待機し、キャンセルする機会を与えます</string>
-  <string name="pref_delayed_duration">遅延時間 (秒)</string>
-  <string name="pref_delayed_duration_summary">メッセージを送信する前に待機する時間を設定します</string>
+  <string name="pref_delayed_summary">メッセージ送信前に一定時間待機します。待機中は送信をキャンセルできます</string>
+  <string name="pref_delayed_duration">待機時間 (秒)</string>
+  <string name="pref_delayed_duration_summary">メッセージ送信前の待機時間 (秒) を設定します</string>
   <string name="pref_night_auto">自動夜間モード</string>
-  <string name="pref_night_auto_summary">時間に基づく、自動夜間モードを有効にします</string>
-  <string name="pref_day_start">昼間の開始時刻を指定します</string>
-  <string name="pref_night_start">夜間の開始時刻を指定します</string>
+  <string name="pref_night_auto_summary">時刻による自動夜間モードを有効にします</string>
+  <string name="pref_day_start">昼間の開始時刻</string>
+  <string name="pref_night_start">夜間の開始時刻</string>
   <string name="pref_qk_responses">QK 応答</string>
   <string name="pref_qk_responses_summary">Android 端末が使用する、プリセットの応答を変更します</string>
   <string name="pref_quickreply_enabled">QK 返信</string>
   <string name="pref_quickreply_enabled_summary">新しいメッセージを受信するたび、QK 返信ウィンドウを表示します</string>
   <string name="pref_tap_to_quit">タップで閉じる</string>
-  <string name="pref_tap_to_quit_summary">QK 返信ウィンドウの外側をタップすることで閉じます</string>
+  <string name="pref_tap_to_quit_summary">QK 返信ウィンドウの外側をタップすることでウィンドウを閉じます</string>
   <string name="pref_quickcompose">QK 作成</string>
   <string name="pref_quickcompose_summary">通知をタップして新しいメッセージを作成します</string>
   <string name="pref_mms_enabled">MMS を有効にしました</string>
@@ -242,7 +242,7 @@
   <string name="pref_mms_port">MMS ポート</string>
   <string name="pref_apn_chooser">デフォルト APN を読み込む</string>
   <string name="pref_strip_unicode">ユニコードを除去</string>
-  <string name="pref_strip_unicode_summary">フルレングスのメッセージでサポートされていない GSM 互換文字を置換します</string>
+  <string name="pref_strip_unicode_summary">GSM 互換文字による最大文字数のメッセージではサポートされない文字を変更します</string>
   <string name="pref_system_bar_flat">フラット システム バー</string>
   <string name="pref_system_bar_flat_summary">ほとんどの KitKat デバイスで、システム UI バーのグラデーションを取り除きます</string>
   <string name="pref_status_compat">ステータス バーの修正</string>
@@ -254,11 +254,11 @@
   <string name="pref_about_authors_summary">Moez Bhatti</string>
   <string name="pref_changelog_summary">変更履歴を表示します</string>
   <string name="pref_about_thanks_title">謝辞</string>
-  <string name="pref_about_thanks_summary">オープン ソース貢献者を表示します</string>
+  <string name="pref_about_thanks_summary">オープンソース貢献者を表示します</string>
   <string name="pref_donate_title">寄付</string>
   <string name="pref_donate_summary">QKSMS は無料です。寄付をして私たちをサポートしてください!</string>
   <string name="pref_about_gplus_title">Google+</string>
-  <string name="pref_about_gplus_summary">Google+ の QKSMS ベータ テスト コミュニティに参加してください</string>
+  <string name="pref_about_gplus_summary">Google+ の QKSMS ベータテストコミュニティに参加してください</string>
   <string name="pref_about_github_title">GitHub</string>
   <string name="pref_about_github_summary">QKSMS はオープンソースです。GitHub で貢献や問題の報告をしてください</string>
   <string name="pref_about_crowdin_title">Crowdin</string>
@@ -671,7 +671,7 @@
   <string name="pref_category_mms_configuration">MMS 設定</string>
   <string name="pref_mms_contact_support_summary">MMS を設定する支援をうけるため、QKSMS チームに連絡します</string>
   <string name="pref_markdown_enabled">テキストの書式設定</string>
-  <string name="pref_markdown_enabled_summary">メッセージを太字、下線、および斜体にするため、マークダウン構文を使用します</string>
+  <string name="pref_markdown_enabled_summary">マークダウン構文を使用して、メッセージの太字、下線および斜体を取得します</string>
   <string name="want_read_indicators">既読インジケーターが必要ですか?</string>
   <string name="color_swatch_description">色 %1$d</string>
   <string name="color_swatch_description_selected">色 %1$d を選択しました</string>
